<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2mower_behavior</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="paddy-daun@web.de">ros</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>behaviortree_ros2</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ros2mower_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
