<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2mower_map_provider</name>
  <version>0.0.0</version>
  <description>ROS2Mower Map Server</description>
  <maintainer email="info@weberpatrick.de">ros</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ros_testing</test_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>ros2mower_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
 
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ros2mower_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
